@@ -116,4 +116,5 @@
 	Bugfix point release. Bug(s) fixed:
 	- Don't check access level on channel mode change, just do what the server
 		tells us. Also fix a bug in the mode callback. (#32)
+	- Fix a crash when verbose is enabled and one tries to unban (#59)
 	- Multiple word descriptions might be nice on channel registration. (#54)
